Change script path

--- a/frontend/Pages/trips.html
+++ b/frontend/Pages/trips.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trip Creation</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Trip Management</h1>
+    <div id="dataContainer"></div>
+
+    <script src="/Scripts/trips.js"></script>
+  </body>
 </html>
