--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,6 @@
     </form>
     <br />
     <button onclick="getUser()">Get User Data</button>
-    <script src="/script.js"></script>
+    <script src="/Scripts/script.js"></script>
   </body>
 </html>
