--- a/frontend/Pages/register.html
+++ b/frontend/Pages/register.html
@@ -34,6 +34,6 @@
       <p>Already have an account? <a href="/">Log In</a></p>
     </form>
 
-    <script src="/script.js"></script>
+    <script src="/Scripts/script.js"></script>
   </body>
 </html>
