--- a/frontend/Pages/trips.html
+++ b/frontend/Pages/trips.html
@@ -8,7 +8,36 @@
   </head>
   <body>
     <h1>Trip Management</h1>
-    <div id="dataContainer"></div>
+    <div id="dataContainer">
+      <table class="trips-table">
+        <tr>
+          <th>Trip Name</th>
+          <th>Destination</th>
+          <th>Description</th>
+          <th>Start Date</th>
+          <th>End Date</th>
+        </tr>
+      </table>
+    </div>
+    <br />
+    <div class="trip-buttons">
+      <button id="displayFormButton" onclick="toggleForm()">
+        Create New Trip
+      </button>
+      <form class="create-trip-form hidden" id="createTripForm">
+        <label for="tripName">Trip Name</label>
+        <input type="text" name="tripName" id="tripName" />
+        <label for="destination">Destination</label>
+        <input type="text" name="destination" id="destination" />
+        <label for="description">Description</label>
+        <textarea name="description" id="description"></textarea>
+        <label for="startDate">Start Date</label>
+        <input type="date" id="startDate" />
+        <label for="endDate">End Date</label>
+        <input type="date" id="endDate" />
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
 
     <script src="/Scripts/trips.js"></script>
   </body>
