--- a/frontend/Pages/register.html
+++ b/frontend/Pages/register.html
@@ -6,7 +6,7 @@
     <title>Registration</title>
   </head>
   <body>
-    <form method="POST" id="registerForm">
+    <form id="registerForm" method="post" action="#">
       <label for="userName">Username</label>
       <input type="text" name="userName" id="userName" placeholder="Example" />
       <label for="userEmail">E-mail</label>
@@ -34,6 +34,6 @@
       <p>Already have an account? <a href="/">Log In</a></p>
     </form>
 
-    <script src="/Scripts/script.js"></script>
+    <script src="/Scripts/register.js"></script>
   </body>
 </html>
