--- a/frontend/Pages/trips.html
+++ b/frontend/Pages/trips.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Trip Management</h1>
     <div id="dataContainer">
-      <h2>Trip Name</h2>
+      <h2>Trips</h2>
     </div>
     <br />
     <div class="trip-buttons">
