--- a/frontend/Pages/destinations.html
+++ b/frontend/Pages/destinations.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Destinations</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
     <button onclick="history.back()">Back</button>
     <div id="destinationsContainer">
       <h2>Destinations for "<span id="tripTitle"></span>"</h2>
     </div>
-
+    <button onclick="toggleDestinationForm()">Create Destination</button>
+    <form id="destinationForm" class="destination-form hidden">
+      <label for="destinationName">Destination Name</label>
+      <input type="text" name="destinationName" id="destinationName" />
+      <input type="submit" value="Submit" />
+    </form>
     <script src="/Scripts/destinations.js"></script>
   </body>
 </html>
