Add functionality for activity creation, display and deletion, fix destination display messages.

--- a/frontend/Pages/destinations.html
+++ b/frontend/Pages/destinations.html
@@ -9,7 +9,7 @@
   <body>
     <button onclick="history.back()">Back</button>
     <div id="destinationsContainer">
-      <h2>Destinations for "<span id="tripTitle"></span>"</h2>
+      <h2 id="tripTitle"></h2>
     </div>
     <button onclick="toggleDestinationForm()">Create Destination</button>
     <form id="destinationForm" class="destination-form hidden">
