--- a/frontend/Pages/trips.html
+++ b/frontend/Pages/trips.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
+    <button onclick="history.back()">Back</button>
     <h1>Trip Management</h1>
     <div id="dataContainer">
       <h2>Trips</h2>
