--- a/frontend/Pages/register.html
+++ b/frontend/Pages/register.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
-    <form id="registerForm" method="post" action="#">
+    <form id="registerForm" method="post" action="#" class="account-form">
       <label for="userName">Username</label>
       <input type="text" name="userName" id="userName" placeholder="Example" />
       <label for="userEmail">E-mail</label>
