--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trip Planner</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
-    <h1>Login Form</h1>
-    <form id="loginForm">
+    <form id="loginForm" class="account-form">
       <label for="userEmail">Email</label>
       <input
         type="text"
