Add functionality for weather forecast

--- a/frontend/Pages/trips.html
+++ b/frontend/Pages/trips.html
@@ -12,6 +12,7 @@
     <button id="displayFormButton" onclick="toggleCreateForm()">
       Create New Trip
     </button>
+    <a href="/Pages/forecast.html">Forecast</a>
     <div id="dataContainer" class="trip-container"></div>
     <br />
     <form class="trip-form hidden" id="createTripForm">
