Add styling for background and elements

--- a/frontend/Pages/forecast.html
+++ b/frontend/Pages/forecast.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <button onclick="history.back()">Back</button>
-    <form id="forecastForm">
+    <form id="forecastForm" class="forecast-form">
       <label for="locationName">Location</label>
       <input
         type="text"
